[tool.poetry]
name = "pytest-beam"
version = "0.1.0"
description = ""
authors = ["Baptiste Fontaine <baptiste@bixoto.com>"]
readme = "README.md"
packages = [{include = "pytest_beam"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
apache-beam = "^2.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
